 * Removed deprecated (Inverse)Gamma.setKLambda
 * Removed deprecated Os::GetEndOfLine
 * Deprecated Sample|CorrelationAnalysis::computePearsonCorrelation in favor of computeLinearCorrelation
 * Deprecated Cobyla::setIgnoreFailure, TNC::setIgnoreFailure in favor of setCheckStatus
 * Deprecated OptimizationAlgorithm.set/getMaximumEvaluationNumber in favor of set/getMaximumCallsNumber

=== Documentation ===

=== Python module ===

=== Miscellaneous ===



== 1.22rc1 release (2023-11-14) == #release-1.22rc1

=== Library ===

==== Major changes ====

==== New classes ====
 * BoundaryMesher (openturns.experimental)
 * LatentVariableModel (openturns.experimental)
 * StudentCopula (openturns.experimental)
 * StudentCopulaFactory (openturns.experimental)
 * TruncatedOverMesh (openturns.experimental)
 * SimplicialCubature (openturns.experimental)

==== API changes ====
 * Removed deprecated (Non)LinearLeastSquaresCalibration::getCandidate method
 * Removed deprecated (Non)GaussianLinearCalibration::getCandidate method
 * Removed deprecated DomainIntersection|Union|DisjunctiveUnion(Domain, Domain) ctors
 * Removed deprecated EllipticalDistribution::getInverseCorrelation method
 * Removed deprecated Basis::getDimension method
 * Removed deprecated HSICStat ctors relying on weight matrix
 * Deprecated Pagmo.setGenerationNumber for setMaximumIterationNumber
 * Deprecated NLopt.SetSeed for setSeed
 * Deprecated IterativeThresholdExceedance(dimension, threshold) ctor
 * Deprecated Linear|QuadraticLeastSquares(Sample, Function) constructor
 * Deprecated SubsetSampling.setKeepEventSample, getEventInputSample, getEventOutputSample
 * Deprecated SubsetSampling.setISubset, setBetaMin
 * QuantileMatchingFactory probabilities argument is no longer optional
 * Add a new moment order argument to MethodOfMomentsFactory
 * Removed Drawable.getPointCode
 * Deprecated LHS in favor of ProbabilitySimulationAlgorithm+LHSExperiment
 * Deprecated OptimizationAlgorithm.setVerbose/getVerbose