@@ -1,2 +1,2 @@
-intermediate results=[class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[-1.3474,0.204519] optimal value=class=Point name=Unnamed dimension=1 values=[-3.04985] evaluationNumber=22 iterationNumber=0 absoluteError=5.50198e-05 relativeError=4.08342e-05 residualError=8.00124e-09 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2,class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[-1.3474,0.204519] optimal value=class=Point name=Unnamed dimension=1 values=[-3.04985] evaluationNumber=14 iterationNumber=0 absoluteError=0.000144959 relativeError=0.000107585 residualError=3.14601e-08 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2,class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[0.228279,-1.62553] optimal value=class=Point name=Unnamed dimension=1 values=[-6.55113] evaluationNumber=37 iterationNumber=0 absoluteError=0.00014628 relativeError=8.99887e-05 residualError=3.69042e-08 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2,class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[0.228279,-1.62553] optimal value=class=Point name=Unnamed dimension=1 values=[-6.55113] evaluationNumber=19 iterationNumber=0 absoluteError=0.000169925 relativeError=0.000104535 residualError=7.25501e-08 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2]
+intermediate results=[class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[-1.3474,0.204519] optimal value=class=Point name=Unnamed dimension=1 values=[-3.04985] callsNumber=22 iterationNumber=0 absoluteError=5.50198e-05 relativeError=4.08342e-05 residualError=8.00124e-09 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2,class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[-1.3474,0.204519] optimal value=class=Point name=Unnamed dimension=1 values=[-3.04985] callsNumber=14 iterationNumber=0 absoluteError=0.000144959 relativeError=0.000107585 residualError=3.14601e-08 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2,class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[0.228279,-1.62553] optimal value=class=Point name=Unnamed dimension=1 values=[-6.55113] callsNumber=37 iterationNumber=0 absoluteError=0.00014628 relativeError=8.99887e-05 residualError=3.69042e-08 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2,class=OptimizationResult status=0 statusMessage=Converged (|f_n-f_(n-1)| ~= 0) optimal point=class=Point name=Unnamed dimension=2 values=[0.228279,-1.62553] optimal value=class=Point name=Unnamed dimension=1 values=[-6.55113] callsNumber=19 iterationNumber=0 absoluteError=0.000169925 relativeError=0.000104535 residualError=7.25501e-08 constraintError=0 problem=class=OptimizationProblem implementation=class=OptimizationProblemImplementation objective=class=Function name=Unnamed implementation=class=FunctionImplementation name=Unnamed description=[x,y,y0] evaluationImplementation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] gradientImplementation=class=SymbolicGradient name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] hessianImplementation=class=SymbolicHessian name=Unnamed evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x,y] outputVariablesNames=[y0] formulas=[3*(1-x)^2*exp(-x^2-(y+1)^2)-10*(x/5-x^3-y^5)*exp(-x^2-y^2)-exp(-(x+1)^2-y^2)/3] equality constraint=none inequality constraint=none bounds=class=Interval name=Unnamed dimension=2 lower bound=class=Point name=Unnamed dimension=2 values=[-3,-3] upper bound=class=Point name=Unnamed dimension=2 values=[3,3] finite lower bound=[1,1] finite upper bound=[1,1] minimization=true dimension=2]
 intermediate results=[]
